crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__operator__add_string_nil.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/add_string_nil.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: type error in binary operator `+`: lhs has type `String`, but rhs has type `Nil`
   ╭─[craftinginterpreters/test/operator/add_string_nil.lox:1:1]
   │
 1 │ "s" + nil; // expect runtime error: Operands must be two numbers or two strings.
   │ ─┬─ ┬ ─┬─  
   │  │  │  ╰─── this is of type `Nil`
   │  │  │      
   │  │  ╰────── the operator in question
   │  │         
   │  ╰───────── this is of type `String`
   │ 
   │ Help: operator `+` can only be applied to two numbers or two strings
───╯
